[gd_scene load_steps=6 format=2]

[ext_resource path="res://Coin/Small Coin.png" type="Texture" id=1]
[ext_resource path="res://Coin/Coin.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=3]
bounce = 0.5

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 2.5

[node name="Coin" type="RigidBody2D"]
collision_layer = 0
physics_material_override = SubResource( 3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FadeTween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="tween_completed" from="FadeTween" to="." method="_on_FadeTween_tween_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Coin_body_entered"]
